Fix code-style suggestions